--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
-  "name": "iov-tools",
+  "name": "token-finder",
   "version": "0.1.0",
   "private": true,
+  "author": "IOV SAS <admin@iov.one>",
+  "license": "Apache-2.0",
   "dependencies": {
+    "@iov/bns": "^0.10.1",
+    "@iov/crypto": "^0.10.1",
+    "@iov/encoding": "^0.10.1",
+    "@iov/keycontrol": "^0.10.1",
+    "@iov/lisk": "^0.10.1",
+    "@iov/rise": "^0.10.1",
+    "@types/node": "^10.12.14",
+    "@types/react": "^16.7.17",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "left-pad": "^1.3.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "typescript": "~3.1"
   },
   "scripts": {
     "start": "react-scripts start",
