--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "~3.2"
   },
   "scripts": {
+    "lint": "tslint -t verbose --project .",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +42,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-immutable": "^5.0.1"
   }
 }
