Upgrade IOV-Core to 0.10.2

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "license": "Apache-2.0",
   "homepage": "https://iov-one.github.io/token-finder/",
   "dependencies": {
-    "@iov/bns": "^0.10.1",
+    "@iov/bcp-types": "^0.10.2",
+    "@iov/bns": "^0.10.2",
     "@iov/crypto": "^0.10.1",
     "@iov/encoding": "^0.10.1",
-    "@iov/keycontrol": "^0.10.1",
-    "@iov/lisk": "^0.10.1",
-    "@iov/rise": "^0.10.1",
+    "@iov/keycontrol": "^0.10.2",
+    "@iov/lisk": "^0.10.2",
+    "@iov/rise": "^0.10.2",
     "@types/node": "^10.12.14",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
