--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "lint": "tslint -t verbose --project .",
+    "format": "prettier --write --loglevel warn \"./src/**/*.{ts,tsx}\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +45,7 @@
   ],
   "devDependencies": {
     "gh-pages": "^2.0.1",
+    "prettier": "^1.15.3",
     "tslint": "^5.12.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-immutable": "^5.0.1"
