--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "license": "Apache-2.0",
   "homepage": "https://iov-one.github.io/token-finder/",
   "dependencies": {
-    "@iov/bcp-types": "^0.12.0",
-    "@iov/bns": "^0.12.0",
-    "@iov/crypto": "^0.12.0",
-    "@iov/dpos": "^0.12.0",
-    "@iov/encoding": "^0.12.0",
-    "@iov/ethereum": "^0.12.2",
-    "@iov/keycontrol": "^0.12.0",
-    "@iov/lisk": "^0.12.0",
-    "@iov/rise": "^0.12.0",
+    "@iov/bcp": "^0.13.0",
+    "@iov/bns": "^0.13.0",
+    "@iov/crypto": "^0.13.0",
+    "@iov/dpos": "^0.13.0",
+    "@iov/encoding": "^0.13.0",
+    "@iov/ethereum": "^0.13.0",
+    "@iov/keycontrol": "^0.13.0",
+    "@iov/lisk": "^0.13.0",
+    "@iov/rise": "^0.13.0",
     "@types/node": "^10.12.14",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
