--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "homepage": "https://iov-one.github.io/token-finder/",
   "scripts": {
-    "lint": "tslint -t verbose --project .",
+    "lint": "eslint -c .eslintrc.json --max-warnings 0 'src/**/*.ts{,x}' && tslint -t verbose --project .",
     "format": "prettier --write --loglevel warn \"./src/**/*.{ts,tsx}\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -45,6 +45,13 @@
     "typescript": "~3.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "eslint": "^5",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-simple-import-sort": "^4.0.0",
     "gh-pages": "^2.0.1",
     "prettier": "^1.18.2",
     "tslint": "^5.12.0",
