Upgrade IOV-Core to 1.0.0-alpha.1

--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@iov/bcp": "^0.17.0",
-    "@iov/bns": "^0.17.0",
-    "@iov/crypto": "^0.17.0",
-    "@iov/dpos": "^0.17.0",
-    "@iov/encoding": "^0.17.0",
-    "@iov/ethereum": "^0.17.0",
-    "@iov/keycontrol": "^0.17.0",
-    "@iov/lisk": "^0.17.0",
-    "@iov/rise": "^0.17.0",
+    "@iov/bcp": "^1.0.0-alpha.1",
+    "@iov/bns": "^1.0.0-alpha.1",
+    "@iov/crypto": "^1.0.0-alpha.1",
+    "@iov/dpos": "^1.0.0-alpha.1",
+    "@iov/encoding": "^1.0.0-alpha.1",
+    "@iov/ethereum": "^1.0.0-alpha.1",
+    "@iov/keycontrol": "^1.0.0-alpha.1",
+    "@iov/lisk": "^1.0.0-alpha.1",
+    "@iov/rise": "^1.0.0-alpha.1",
     "@types/node": "^10.12.14",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
