--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@cosmwasm/bcp": "^0.8.0",
     "@iov/bcp": "^2.0.0-alpha.2",
     "@iov/bns": "^2.0.0-alpha.2",
     "@iov/crypto": "^2.0.0-alpha.2",
