Remove some outdated duplicate @iov/* dependencies

--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   ],
   "dependencies": {
     "@cosmwasm/bcp": "^0.8.0",
-    "@iov/bcp": "^2.0.0-alpha.2",
-    "@iov/bns": "^2.0.0-alpha.2",
-    "@iov/crypto": "^2.0.0-alpha.2",
-    "@iov/encoding": "^2.0.0-alpha.2",
-    "@iov/ethereum": "^2.0.0-alpha.2",
-    "@iov/keycontrol": "^2.0.0-alpha.2",
-    "@iov/lisk": "^2.0.0-alpha.2",
+    "@iov/bcp": "^2.0.0",
+    "@iov/bns": "^2.0.0",
+    "@iov/crypto": "^2.0.0",
+    "@iov/encoding": "^2.0.0",
+    "@iov/ethereum": "^2.0.0",
+    "@iov/keycontrol": "^2.0.0",
+    "@iov/lisk": "^2.0.0",
     "@types/node": "^10.12.14",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
